--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "axios": "^0.17.0",
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-router-dom": "^4.1.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
